form button mobile fixed

--- a/src/container/Auth/Login/Login.scss
+++ b/src/container/Auth/Login/Login.scss
@@ -38,7 +38,7 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
-    // margin: 10px 0;
+    margin: 30px 0 20px 0;
   }
   .password {
     &:first-child {
@@ -96,3 +96,7 @@ form {
   display: flex;
   justify-content: center;
 }
+// .button_wrap_home {
+//   margin: 30px 20px 0;
+//   text-align: center;
+// }
